# workout-app

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  FEEDBACK-AND-SPEC-2026-04-25.md  HANDOFF.md  Makefile  NEXT_RELEASE.md  README.md  pyproject.toml  skills-lock.json
.claude/: settings.json
.codex/: config.toml
.codex/rules/: python-api-engineering.rules
.github/workflows/: ci.yml
.xcodebuildmcp/: config.yaml
app/: .swiftlint.yml  README.md  project.yml
app/WorkoutDB/: HealthArchiveAppHooks.swift  HealthArchiveBackgroundExport.swift  HealthKitProbeView.swift  Info.plist  RootView+DebugLaunch.swift  WorkoutDBApp.swift
app/WorkoutDBKeychainTests/: TokenStoreKeychainBoundaryTests.swift
app/WorkoutDBTests/: HealthArchiveAppHooksTests.swift  WorkoutDBSmokeTests.swift
app/WorkoutDBUITests/: ExecutionEndConfirmationUITests.swift  ExecutionWorkoutTypeMatrixUITests.swift  HealthKitAuthorizationUITests.swift  SettingsHealthArchiveUITests.swift  WorkoutKitHandoffUITests.swift
app/WorkoutDBWatch/: Info.plist  WorkoutDBWatchApp.swift
db/migrations/: 001_initial.sql  002_workout_item_prescription.sql  003_workout_item_time_distance.sql  004_workout_item_pace.sql  005_actions.sql  005_planned_workout_calendar.sql  006_intent_taxonomy.sql  006_user_goal_unique.sql  007_planning_meta_and_intents.sql
deploy/: bootstrap.sh  com.ericfeunekes.workoutdb.agent.plist  com.ericfeunekes.workoutdb.plist  db_backup.py  deploy.sh  rollback.sh  run.sh  workoutdb-server.service
deploy/release/: testflight.env.example  testflight.py
docs/: AGENTS.md  ARCHITECTURE.md  MIGRATIONS.md  QA.md  TESTING.md  WORKFLOW.md  backlog.md  bugs.md  design-system.md  feature-gap-map.md  features.md  healthkit-data-access.md  ios-dev-loop.md  modifier-equipment.md  observability-map.md  open-questions.md  prescription.md  sdlc.md  set-edit-sheet.md  spec.md  sync.md  testing-pyramid.md  watch-metrics.md  workout-execution-design-plan.md  workout-execution-requirements.md  workout-generation.md  workout-taxonomy.md
docs/architecture/: boundaries.md  context.md  fitness-functions.md  hotspots.md  swift-packages.md
docs/data/: intent-taxonomy.md
docs/data-model/: INTENT.md  README.md  catalog.md  examples.md  execution.md  intent.md  library.md  overview.md  planning.md
docs/decisions/: ADR-2026-04-17-architecture.md  ADR-2026-04-17-rir-autoreg-sync.md  ADR-2026-04-17-ux-scope.md  ADR-2026-04-18-shell-package-placement.md  ADR-2026-04-18-smart-defaults.md
docs/design/: BACKLOG.md  Execution Flow v2.html  FLOWS.html  HANDOFF.md  ORIGIN.md  README.md  RULES.md  WorkoutDB Hi-Fi.html  WorkoutDB Watch Hi-Fi v2.html  WorkoutDB Watch Hi-Fi.html  WorkoutDB Wireframes - Meta & History.html  WorkoutDB Wireframes v2.html
docs/features/: INDEX.md  app-intents.md  autoreg.md  block-transition.md  bootstrap.md  execute-loop.md  exercise-swap.md  firstrun.md  history.md  in-app-claude.md  past-set-edit.md  persistence.md  push-queue.md  save-and-done.md  settings.md  telemetry.md  timing-modes.md  today.md  watch-primary-execution.md  watch-workoutkit-handoff.md  workout-preview.md
docs/infrastructure/: home-server.md
docs/roadmap/: 00-mvp-definition.md  01-phase0-foundation.md  02-phase1-import-your-history.md  02-phase1-reference-library.md  03-phase2-external-sources-licensing.md  04-phase3-plan-generation-and-scheduling.md  05-phase4-output-feedback-loop.md  06-phase5-ios-1.0  07-epic2-ios-and-cloud.md  AGENTS.md  README.md  appendix-a-data-model.md  enhancements.md
docs/runbooks/: closeout.md  first-real-workout.md  watch-workoutkit-proof.md
docs/specs/: data-model-exploration.md  primitives-data-model.md  v2-architecture.md
docs/testing/: README.md  app-state-and-persistence.md  execution-and-editing.md  external-boundaries.md  proof-patterns.md  runtime-and-ui-proof.md
schema/: Package.swift  README.md  openapi.json
schema/fixtures/: exercise_with_defaults.json  prescription_accumulate.json  prescription_amrap.json  prescription_amrap_token.json  prescription_bodyweight.json  prescription_circuit.json  prescription_cluster.json  prescription_continuous.json  prescription_custom.json  prescription_drop_set.json  prescription_emom.json  prescription_for_time.json  prescription_intervals.json  prescription_parameter_overrides.json  prescription_per_side.json  prescription_percent_1rm.json  prescription_rep_range.json  prescription_rest_block.json  prescription_sets_detail.json  prescription_straight_sets.json  prescription_superset.json  prescription_tabata.json  prescription_tempo.json  prescription_warmup.json  prescription_weighted_bodyweight.json  primitive_amrap_workout.json  primitive_strength_workout.json  sync_pull_response.json  telemetry_event.json  workout_create.json
scripts/: analyze_extracted_json.py
server/: README.md
server/workoutdb_server/: __init__.py  config.py  db.py  logging_setup.py  main.py  migrations.py  models.py
tests/: README.md  conftest.py
tests/architecture/: test_adr_index.py  test_app_package_test_gate.py  test_destructive_cutover_authority.py  test_monorepo_shape.py  test_no_rpe.py  test_open_questions.py  test_prescription_shape_parity.py  test_primitive_contract_authority.py  test_workoutkit_boundaries.py
tests/cassettes/: calendar_full_flow.yaml
tests/contract/: test_fixture_decoding.py  test_openapi_drift.py  test_prescription_fixture_decoding.py  test_swift_schema_parity.py
tests/fixtures/: library.yaml
tests/integration/: test_extracted_json_import.py  test_intents.py  test_intents_cli.py  test_intents_extra.py  test_plan_date_range.py  test_plan_generate.py  test_plan_idempotency.py  test_yaml_import.py
tests/release/: test_testflight_release.py
tests/server/: conftest.py  test_api_auth.py  test_api_exercises.py  test_api_health.py  test_api_health_archive.py  (+13 more)
workoutdb/: action_models.py  actions_apply.py  actions_db.py  calendar_api.py  cli.py  config.py  db.py  extracted_json_import.py  google_auth.py  migrations.py  plan_proposals.py  yaml_import.py  yaml_io.py  yaml_models.py
(+224 files in other folders)
