[project]
name = "workoutdb"
version = "0.1.0"
description = "Local-first workout planning and logging system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "google-api-python-client>=2.128",
  "google-auth>=2.29",
  "google-auth-oauthlib>=1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
workoutdb = "workoutdb.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore:.*setName.*deprecated.*:DeprecationWarning:httplib2.*",
  "ignore:.*leaveWhitespace.*deprecated.*:DeprecationWarning:httplib2.*",
  "ignore:.*setParseAction.*deprecated.*:DeprecationWarning:httplib2.*",
  "ignore:.*addParseAction.*deprecated.*:DeprecationWarning:httplib2.*",
  "ignore:.*delimitedList.*deprecated.*:DeprecationWarning:httplib2.*",
]

[tool.setuptools]
packages = ["workoutdb"]
