[project]
name = "workoutdb-server"
version = "0.0.1"
description = "WorkoutDB home server \u2014 FastAPI + SQLite exchange layer between Claude and the iOS app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.6",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
  "ruff>=0.6",
  "import-linter>=2.0",
  "pre-commit>=3.7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

# .codex/skills/ holds imported Codex skill bundles — example code, templates,
# and scripts authored as portable artifacts. They aren't part of this repo's
# runtime and shouldn't be held to its lint rules.
extend-exclude = [".codex"]

# FF-2 + FF-3 · Lint surface and complexity gate.
# See docs/architecture/fitness-functions.md.
[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "W",     # pycodestyle warnings
  "I",     # isort (import order)
  "B",     # flake8-bugbear (common footguns: mutable defaults, etc.)
  "C901",  # McCabe cyclomatic complexity
]

[tool.ruff.lint.mccabe]
max-complexity = 10

# FastAPI's dependency-injection idiom uses `Depends()`, `Query()`, etc. as
# argument defaults — which is exactly what B008 flags. The pattern is the
# framework contract, not a footgun. Scope the exemption to the API layer.
[tool.ruff.lint.per-file-ignores]
"server/workoutdb_server/api/*.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "server"}
packages = ["workoutdb_server"]

# Architectural boundaries enforced at lint time. Every new module/package must either
# fit an existing contract or add a new one. See docs/WORKFLOW.md § "Architectural enforcement".
# Run: `uv run lint-imports`
[tool.importlinter]
root_package = "workoutdb_server"

# Layer 1 — config and logging_setup are the foundation.
# Import nothing repo-local; imported by everything else.
[[tool.importlinter.contracts]]
name = "foundation has no repo-local imports"
type = "forbidden"
source_modules = [
  "workoutdb_server.config",
  "workoutdb_server.logging_setup",
]
forbidden_modules = [
  "workoutdb_server.api",
  "workoutdb_server.db",
  "workoutdb_server.models",
  "workoutdb_server.migrations",
  "workoutdb_server.sync",
]

# Layer 2 — db + models + migrations sit above config, below api. Never reach up into api.
[[tool.importlinter.contracts]]
name = "data layer never depends on api layer"
type = "forbidden"
source_modules = [
  "workoutdb_server.db",
  "workoutdb_server.models",
  "workoutdb_server.migrations",
]
forbidden_modules = ["workoutdb_server.api"]

# Layer 3 — api is the outermost layer. Depends on everything below; nothing depends on it.
# (Enforced by the contracts above — no explicit forbidden rule needed here.)

# sync, when it exists, sits with api (outermost). Same rule.
[[tool.importlinter.contracts]]
name = "sync layer never depends on api routes directly"
type = "forbidden"
source_modules = ["workoutdb_server.sync"]
forbidden_modules = ["workoutdb_server.api"]
